# fluorescence_microscope

./: .gitignore  README.md  pyproject.toml
src/fluorescence_loader/: compute.py  compute_intensity.py  plot_intensity.py  run_experiment_pipeline.py
