[project]
name = "fluorescence_loader"
version = "0.1.0"
description = "Machine learning and structural analysis pipeline for microscopy and material-science imaging"
authors = [{ name = "Bratati Das", email = "your@email.com" }]
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "scipy",
    "tifffile",
    "lxml",
    "pandas",
    "matplotlib",
    "requests",
    "imagecodecs",
    "bioio>=1.3.0",
    "bioio-ome-tiff",
    "tifffile",
    "bioio-tifffile",
    "bioio-ome-tiff",
    "scikit-image",
    "ome-types",
    "xarray",
    "dask[array]",
    "nd2",
    "matplotlib",
    "scipy",
    "torch",
    "torchvision",
     # -------------------------
    # Data handling
    # -------------------------
    "dask[array]",

    # -------------------------
    # Utilities
    # -------------------------
    "tqdm",
]


[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = { "" = "src" }
packages = ["fluorescence_loader"]

[dependency-groups]
dev = [
    "pytest>=9.0.1",
    "pytest-mock"
]

